Path SW Optimizado

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="bubble">
                         <h3>@spiderman</h3>
                         <br/>
-                        La tía May, hizo unos panqueques en forma de ironman!
+                        Hola Muchachos!
                     </div>
                     
                     <div class="arrow"></div>
